--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch *.js"
   },
   "dependencies": {
     "lodash": "^4.17.21"
