--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-
 node_modules/
-
+src/
+.cache/
+coverage/
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
